--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,10 @@
     </div>
 
     <div style="text-align: center; max-width: 600px; margin: 20px auto; padding: 20px;">
-       <a href="{% url 'login' %}"> <button>Log In</button> </a>
-        <a href="{% url 'register' %}"> <button>Registration</button> </a>
-
+        <a href="{% url 'login' %}">
             <button style="padding: 10px 20px; font-size: 16px;">Log In</button>
         </a>
-        <a href="{% url 'signup' %}">
+        <a href="{% url 'register' %}">
             <button style="padding: 10px 20px; font-size: 16px;">Registration</button>
         </a>
     </div>
