--- a/wine_app/templates/wine_app/register.html
+++ b/wine_app/templates/wine_app/register.html
@@ -1,1 +1,32 @@
 
+{% extends "wine_app/base.html" %}
+
+{% block content %}
+  <div class="container">
+    <h2>რეგისტრაცია</h2>
+    <form method="post" action="">
+      {% csrf_token %}
+      <div>
+        <label for="username">მომხმარებლის სახელი:</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+
+      <div>
+        <label for="email">ელფოსტა:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div>
+        <label for="password">პაროლი:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+
+      <div>
+        <label for="confirm_password">გაიმეორეთ პაროლი:</label>
+        <input type="password" id="confirm_password" name="confirm_password" required>
+      </div>
+
+      <button type="submit">რეგისტრაცია</button>
+    </form>
+  </div>
+{% endblock %}
