--- a/wine_app/templates/wine_app/register.html
+++ b/wine_app/templates/wine_app/register.html
@@ -1,32 +1,31 @@
+<!DOCTYPE html>
+<html lang="ka">
+<head>
+    <meta charset="UTF-8" />
+    <title>რეგისტრაცია</title>
+</head>
+<body>
+    <h1>რეგისტრაცია</h1>
 
-{% extends "wine_app/base.html" %}
+    {% if error %}
+        <p style="color:red;">{{ error }}</p>
+    {% endif %}
 
-{% block content %}
-  <div class="container">
-    <h2>რეგისტრაცია</h2>
-    <form method="post" action="">
-      {% csrf_token %}
-      <div>
-        <label for="username">მომხმარებლის სახელი:</label>
-        <input type="text" id="username" name="username" required>
-      </div>
+    <form method="post">
+        {% csrf_token %}
+        <label for="username">მომხმარებლის სახელი:</label><br />
+        <input type="text" id="username" name="username" required /><br /><br />
 
-      <div>
-        <label for="email">ელფოსტა:</label>
-        <input type="email" id="email" name="email" required>
-      </div>
+        <label for="email">ელ-ფოსტა:</label><br />
+        <input type="email" id="email" name="email" required /><br /><br />
 
-      <div>
-        <label for="password">პაროლი:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
+        <label for="password1">პაროლი:</label><br />
+        <input type="password" id="password1" name="password1" required /><br /><br />
 
-      <div>
-        <label for="confirm_password">გაიმეორეთ პაროლი:</label>
-        <input type="password" id="confirm_password" name="confirm_password" required>
-      </div>
+        <label for="password2">პაროლის განმეორება:</label><br />
+        <input type="password" id="password2" name="password2" required /><br /><br />
 
-      <button type="submit">რეგისტრაცია</button>
+        <button type="submit">რეგისტრაცია</button>
     </form>
-  </div>
-{% endblock %}
+</body>
+</html>
