--- a/wine_app/templates/wine_app/new_project.html
+++ b/wine_app/templates/wine_app/new_project.html
@@ -35,6 +35,11 @@
         </div>
 
         <div class="form-group">
+            <label>შაქარი (%):</label>
+            <input type="number" name="sugar" step="0.1" class="form-control">
+        </div>
+
+        <div class="form-group">
             <label>BRIX (%):</label>
             <input type="number" name="brix" step="0.1" class="form-control">
         </div>
